dependency updates, avoid deprecated Locale constructors